--- a/src/app/pages/crear-reclamo/crear-reclamo.component.html
+++ b/src/app/pages/crear-reclamo/crear-reclamo.component.html
@@ -5,11 +5,11 @@
 
            
         <form>
-            <!-- <textarea name="reclamo" rows="10" cols="40" [(ngModel)]="NuevoReclamo.detalle">Escribe aquí tu reclamo</textarea> -->
+            <textarea name="reclamo" rows="10" cols="40" [(ngModel)]="NuevoReclamo">Escribe aquí tu reclamo</textarea>
             <button type="submit" class="btn btn-primary btn-block btn-large" (click)='enviaReclamo()'>Enviar</button>
         </form>
 
-            <a href="home.php"><button type="submit" class="btn btn-primary btn-block btn-large">Volver</button></a>
+            <a routerLink='/HomeClientes'><button type="submit" class="btn btn-primary btn-block btn-large">Volver</button></a>
 
         </div>
 
