--- a/src/app/pages/modifica-cliente/modifica-cliente.component.html
+++ b/src/app/pages/modifica-cliente/modifica-cliente.component.html
@@ -34,7 +34,7 @@
                 </tr>                    
             </tbody>
             </table>
-        <a href="home.php"><button type="submit" style="width: 30%;	margin: 0 auto;" class="btn btn-primary btn-block btn-large">Volver</button></a>
+        <a routerLink='/HomeComercial'><button type="submit" style="width: 30%;	margin: 0 auto;" class="btn btn-primary btn-block btn-large">Volver</button></a>
 
         </div>
     </section>
