--- a/src/app/pages/home-comercial/home-comercial.component.html
+++ b/src/app/pages/home-comercial/home-comercial.component.html
@@ -1,15 +1,16 @@
 <article>
     <section class="opcion_comercial"> 
         <div >
-        <a routerLink='/'><button type="submit" class="btn btn-primary btn-block btn-large">Ver Usuarios</button></a>
+            <h1 style="color: white; text-align: center;">Panel de asesor comercial</h1>
+            <a routerLink='/VerClientes'><button type="submit" class="btn btn-primary btn-block btn-large">Ver Usuarios</button></a>
 
-        <a routerLink='/ModificaCliente'><button type="submit" class="btn btn-primary btn-block btn-large">Modificar Usuarios</button></a>
+            <a routerLink='/ModificaCliente'><button type="submit" class="btn btn-primary btn-block btn-large">Modificar Usuarios</button></a>
 
-        <a routerLink='/RegistroCliente'><button style="margin-top:30px;" type="submit" class="btn btn-primary btn-block btn-large">Crear usuarios</button></a>
+            <a routerLink='/RegistroCliente'><button style="margin-top:30px;" type="submit" class="btn btn-primary btn-block btn-large">Crear usuarios</button></a>
         </div>
         
         <div>
-        <button style="margin-top:70px; width:150px; margin-left:70px;" type="button" class="btn btn-primary btn-block btn-large sesion" (click)="logout()">Cerrar Sesion</button>
+            <button style="margin-top:70px; width:150px; margin-left:70px;" type="button" class="btn btn-primary btn-block btn-large sesion" (click)="logout()">Cerrar Sesion</button>
         </div>
     </section>
 
