--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,16 +1,15 @@
-<form>
-    <div class="mb-3">
-      <label for="exampleInputEmail1" class="form-label">Email address</label>
-      <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
-      <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+<article>
+  <section class="login">
+    <div>
+      <h1>Ingresar usuario y contraseña</h1>
+      <form method="post">
+        <input type="text" name="u" placeholder="Usuario" required="required" [(ngModel)]="usuario.usuario">
+        <input type="password" name="p" placeholder="Contraseña" required="required" [(ngModel)]="usuario.contrasena" >
+        <button type="submit" class="btn btn-primary btn-block btn-large" (click) = "loger()" >Enviar</button>
+      </form>              
     </div>
-    <div class="mb-3">
-      <label for="exampleInputPassword1" class="form-label">Password</label>
-      <input type="password" class="form-control" id="exampleInputPassword1">
+    <div>
+      <a routerLink='/recuPass'> <p> Olvide la contraseña</p></a> <br>
     </div>
-    <div class="mb-3 form-check">
-      <input type="checkbox" class="form-check-input" id="exampleCheck1">
-      <label class="form-check-label" for="exampleCheck1">Check me out</label>
-    </div>
-    <button type="submit" class="btn btn-primary">Submit</button>
-</form>
+  </section>
+</article>
